@@ -31,6 +31,7 @@
 	* almost completely changed the storage interface (for custom storage)
 	* added support for hashing pieces in multiple threads
 
+	* fix protocol race-condition in super seeding mode
 	* support read-only DHT nodes
 	* remove unused partial hash DHT lookups
 	* remove potentially privacy leaking extension (non-anonymous mode)
